# uActor

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  LICENSE.txt  Makefile  README.md  THIRD-PARTY.md  boards.yml  fake_client.py  sdkconfig.defaults  sdkconfig.overrides.1
esp32_components/epaper_actor/: CMakeLists.txt
esp32_components/epaper_actor/include/: epaper_actor.hpp
main/: CMakeLists.txt  Kconfig.projbuild  actor.hpp  actor_runtime.hpp  benchmark_actor.hpp  benchmark_configuration.hpp  benchmark_lua_actor.hpp  board_functions.cpp  lua_actor.hpp  lua_cpp_test.cpp  lua_runtime.hpp  main.cpp  managed_actor.cpp  managed_actor.hpp  managed_lua_actor.hpp  message.hpp  publication.cpp  router.cpp  router.hpp  router_v2_freertos.cpp  routing.cpp  tcp_forwarder.hpp  wifi_stack.hpp
main/include/: actor_runtime.hpp  board_functions.hpp  deployment_manager.hpp  executor.hpp  executor_api.hpp  lua_executor.hpp  lua_runtime.hpp  managed_actor.hpp  managed_lua_actor.hpp  managed_native_actor.hpp  message.hpp  native_actor.hpp  native_executor.hpp  native_runtime.hpp  publication.hpp  remote_connection.hpp  router_v2.hpp  runtime_api.hpp  string_helper.hpp  subscription.hpp  topology_manager.hpp
main/include/actor_runtime/: executor.hpp  lua_executor.hpp  managed_actor.hpp  managed_native_actor.hpp  native_actor.hpp
main/include/pubsub/: constraint.hpp  constraint_index.hpp  filter.hpp  matched_publication.hpp  receiver_handle.hpp  router.hpp  subscription.hpp
main/include/remote/: remote_connection.hpp
main/include/support/: string_helper.hpp
main/include_esp32/: bmp180_actor.hpp  gpio_actor.hpp  tcp_forwarder.hpp  wifi_stack.hpp
main/include_esp32/io/: bmp180_actor.hpp  gpio_actor.hpp
main/include_esp32/remote/: tcp_forwarder.hpp
main/legacy/: benchmark_actor.hpp  benchmark_configuration.hpp  benchmark_lua_actor.hpp  router.hpp  router_v2_freertos.cpp
main/legacy/include/: message.hpp  router_v2.hpp
main/src/: managed_actor.cpp  native_actor.cpp  publication.cpp  remote_connection.cpp
main/src/actor_runtime/: managed_lua_actor.cpp  native_actor.cpp
main/src/controllers/: topology_manager.cpp
main/src/pubsub/: constraint_index.cpp  filter.cpp  publication.cpp  router.cpp  subscription.cpp
main/src/remote/: remote_connection.cpp
main/src_esp32/: board_functions.cpp  main.cpp  routing.cpp  testbed.cpp
main/src_esp32/pubsub/: receiver.cpp
main/src_esp32/remote/: tcp_forwarder.cpp  wifi_stack.cpp
main_linux/: CMakeLists.txt
main_linux/include/remote/: tcp_forwarder.hpp
main_linux/src/: board_functions.cpp  main.cpp  mock_receiver.cpp  receiver.cpp  tcp_forwarder.cpp
main_linux/src/testbed/: testbed.cpp
uActor/: CMakeLists.txt
uActor-ESP32/components/ble_actor/: CMakeLists.txt
uActor-ESP32/components/ble_actor/include/: ble_actor.hpp
uActor-ESP32/components/ble_actor/src/: ble_actor.cpp
uActor-ESP32/components/bme280_actor/: CMakeLists.txt
uActor-ESP32/components/epaper_actor/: CMakeLists.txt
uActor-ESP32/components/scd30_actor/: CMakeLists.txt
uActor-ESP32/main/: CMakeLists.txt  Kconfig.projbuild
uActor-ESP32/main/src_esp32/: board_functions.cpp  main.cpp  testbed.cpp
uActor-POSIX/: CMakeLists.txt  uactor_build.dockerfile
uActor-POSIX/include/actors/: http_client_actor.hpp  http_ingress.hpp  influxdb_actor.hpp
uActor-POSIX/include/remote/: tcp_forwarder.hpp
uActor-POSIX/include/support/: posix_native_actors.hpp
uActor-POSIX/src/: board_functions.cpp  main.cpp  receiver.cpp
uActor-POSIX/src/actors/: http_client_actor.cpp  http_ingress.cpp  influxdb_actor.cpp
uActor-POSIX/src/testbed/: testbed.cpp
uActor/include/: board_functions.hpp  testbed.h
uActor/include/actor_runtime/: code_handle.hpp  code_identifier.hpp  code_store.hpp  code_store_actor.hpp  executor.hpp  executor_api.hpp  lua_executor.hpp  lua_functions.hpp  lua_publication_wrapper.hpp  managed_actor.hpp  managed_lua_actor.hpp  managed_native_actor.hpp  managed_wasm_actor.hpp  native_actor.hpp  native_actor_registry.hpp  native_executor.hpp  reply_context.hpp  runtime_allocator_configuration.hpp  wasm_executor.hpp  wasm_functions.hpp
uActor/include/controllers/: deployment_manager.hpp  telemetry_actor.hpp  telemetry_data.hpp  topology_manager.hpp
uActor/include/pubsub/: actor_identifier.hpp  allocator_configuration.hpp  constraint.hpp  constraint_index.hpp  filter.hpp  internal_filter.hpp  matched_publication.hpp  publication.hpp  publication_factory.hpp  receiver.hpp  receiver_handle.hpp  router.hpp  subscription.hpp  subscription_arguments.hpp  vector_buffer.hpp
uActor/include/remote/: forwarder_api.hpp  forwarding_strategy.hpp  remote_connection.hpp  sequence_info.hpp  sequence_number_forwarding_strategy.hpp  stream_publication_framer.hpp  tcp_connection.hpp  tcp_forwarder.hpp
uActor/include/support/: allocator_config.hpp  core_native_actors.hpp  launch_utils.hpp  logger.hpp  memory_manager.hpp  string_helper.hpp  testbed.h  tracking_allocator.hpp
uActor/src/actor_runtime/: code_store.cpp  code_store_actor.cpp  lua_executor.cpp  lua_functions.cpp  lua_publication_wrapper.cpp  managed_actor.cpp  managed_lua_actor.cpp  managed_native_actor.cpp  managed_wasm_actor.cpp  native_actor.cpp  native_actor_registry.cpp  wasm_executor.cpp  wasm_functions.cpp
uActor/src/controllers/: deployment_manager.cpp  telemetry_actor.cpp  topology_manager.cpp
uActor/src/pubsub/: actor_identifier.cpp  constraint.cpp  constraint_index.cpp  filter.cpp  publication.cpp  publication_factory.cpp  router.cpp  subscription.cpp  subscription_arguments.cpp
uActor/src/remote/: remote_connection.cpp  sequence_number_forwarding_strategy.cpp  stream_publication_framer.cpp  tcp_forwarder.cpp
uActor/src/support/: logger.cpp  memory_manager.cpp
unit_test/: CMakeLists.txt  constraint_index_test.cpp  constraint_test.cpp  forwarding_tests.cpp  legacy_routing_tests.cpp  mock_board_functions.cpp  mock_receiver.cpp  mock_router.cpp  mock_routing.cpp  pubsub_tests.cpp  routing_rule_test.cpp  runtime_tests.cpp  test.cpp
(+610 files in other folders)
